{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "99f52eba-4a64-44d3-a226-5d62b092b10b",
            "actions": [
                {
                    "name": "LeftPunch",
                    "type": "Button",
                    "id": "b2ca24fb-7dbc-4ae7-9a88-09bdc2026d64",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightPunch",
                    "type": "Button",
                    "id": "daa20fef-1fd6-4616-ba01-074230fb0697",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e468af93-e7fd-42dd-823c-e59dda368f06",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74471772-c1c8-47ba-ad06-5e9b1e0c070c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}